<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="see_all">Просмотреть всё</string>
    <string name="hint_text">Поиск…</string>

    <string name="library_heading_title">Что вы хотели бы приготовить сегодня?</string>
    <string name="library_categories_title">Категории</string>
    <string name="library_recommendation_title">Рекомендации</string>
    <string name="library_search_title">Поиск</string>
    <string name="more_detailed">Подробнее</string>

    <string name="date_with_calendar">%1$s 📅</string>
    <string name="kcal_norma">"%d / %d"</string>
    <string name="nutrients_norma">"%.0f / %d"</string>
    <string name="quantity_edit_error_empty">Введите количество</string>
    <string name="quantity_edit_error_invalid">Введите корректное число</string>
    <string name="quantity_edit_error_invalid_max">Слишком большое значение</string>
    <string name="carbs">Углеводы</string>
    <string name="fats">Жиры</string>
    <string name="proteins">Протеины</string>
    <string name="Calories">Калории:</string>
    <string name="difficult">Сложность</string>
    <string name="time">Время</string>

    <string name="description">Описание: %s\n\nШаги: %s</string>
    <string name="example_time">45</string>

    <string name="planner_fragment_picker">Выбрать день</string>
    <string name="export_recipe_details">Экспортировать рецепт в список продуктов</string>

</resources>