<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/material_margin_normal"
    android:background="@drawable/gradient_background"
    android:paddingBottom="@dimen/material_margin_normal">

    <ProgressBar
        android:id="@+id/circularProgress"
        android:layout_width="200dp"
        android:layout_height="200dp"
        style="?attr/circularProgressIndicatorStyle"
        android:indeterminate="false"
        android:background="@drawable/circular_background"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:max="100"
        android:progress="35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvKcal"
        style="@style/BaseMediumTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/text_primary"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1200 kcal" />

    <TextView
        android:id="@+id/tvCaloriesName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_large"
        android:text="@string/proteins"
        style="@style/BaseSmallTextStyle"
        android:textColor="@color/text_primary"
        app:layout_constraintEnd_toStartOf="@id/grammGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circularProgress" />

    <TextView
        android:id="@+id/tvProteins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_normal"
        style="@style/BaseMediumTextStyle"
        android:textColor="@color/text_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/grammGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvCaloriesName"
        tools:text="25g" />

    <ProgressBar
        android:id="@+id/linearProgressProtein"
        style="?attr/linearProgressIndicatorStyle"
        android:progressDrawable="@drawable/linear_progress_bar"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:indeterminate="false"
        android:layout_marginHorizontal="@dimen/material_margin_small"
        android:max="100"
        android:progress="60"
        app:layout_constraintEnd_toStartOf="@+id/grammGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProteins" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/grammGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/tvFatsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_large"
        android:text="@string/fats"
        style="@style/BaseSmallTextStyle"
        android:textColor="@color/text_primary"
        app:layout_constraintEnd_toStartOf="@id/grammGuideline1"
        app:layout_constraintStart_toEndOf="@id/grammGuideline"
        app:layout_constraintTop_toBottomOf="@id/circularProgress" />

    <TextView
        android:id="@+id/tvFats"
        style="@style/BaseMediumTextStyle"
        android:textColor="@color/text_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_normal"
        app:layout_constraintEnd_toStartOf="@id/grammGuideline1"
        app:layout_constraintStart_toEndOf="@id/grammGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvFatsName"
        tools:text="25g" />

    <ProgressBar
        android:id="@+id/linearProgressFats"
        style="?attr/linearProgressIndicatorStyle"
        android:progressDrawable="@drawable/linear_progress_bar"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:indeterminate="false"
        android:layout_marginHorizontal="@dimen/material_margin_small"
        android:max="100"
        android:progress="60"
        app:layout_constraintEnd_toStartOf="@+id/grammGuideline1"
        app:layout_constraintStart_toStartOf="@+id/grammGuideline"
        app:layout_constraintTop_toBottomOf="@+id/tvProteins" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/grammGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/tvCarbsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_large"
        android:text="@string/carbs"
        style="@style/BaseSmallTextStyle"
        android:textColor="@color/text_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/grammGuideline1"
        app:layout_constraintTop_toBottomOf="@id/circularProgress" />

    <TextView
        android:id="@+id/tvCarbs"
        style="@style/BaseMediumTextStyle"
        android:textColor="@color/text_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/grammGuideline1"
        app:layout_constraintTop_toBottomOf="@id/tvCarbsName"
        tools:text="60g" />

    <ProgressBar
        android:id="@+id/linearProgressCarbs"
        style="?attr/linearProgressIndicatorStyle"
        android:progressDrawable="@drawable/linear_progress_bar"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="80"
        android:layout_marginHorizontal="@dimen/material_margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/grammGuideline1"
        app:layout_constraintTop_toBottomOf="@+id/tvProteins" />

</androidx.constraintlayout.widget.ConstraintLayout>